Revision history for Math-BigNum

0.15    2016-xx-xx
        - Added unimport support.

            no Math::BigNum;     # disables the `:constant` behavior in the current scope

        - Minor optimizations in the `bernfrac()` method.
        - Optimizations in method `is_pow`. (Thanks Dana Jacobsen)

0.14    2016-10-07
        - Fixed a minor bug inside the method `n->is_pow(p)` when `n` is negative (for old versions of GMP).

0.13    2016-10-07
        - Added the `bernfrac` method, powered by an improved version of Seidel's algorithm.
        - Stricter validation of the precision specified as an import value.
        - Minor bug-fix in the method `is_pow` for `is_pow(-1, odd_n)` -- it now returns true.
        - Fixed some special cases in the method `iroot`.
        - Fixed a special case in the method `valuation` when the second argument is `0`.

0.12    2016-10-05
        - Decreased the default floating-point precision from 256 bits, to 200 bits.
        - Added support for specifying the default precision as an import value.

            Example:
                use Math::BigNum PREC => 1024;

        - Fixed a minor-bug in the method `is_pow` for some special cases.
        - Minor POD fixes.

0.11    2016-10-04
        - Added the `$n->parts` method, which returns the numerator and the denominator as BigNum objects.
        - Increased the default accuracy value for the method `is_prime` from 12 to 20.
        - Support for rational exponentiation with an integer power.

            Example:
                (3/5)**3 == 27/125

        - Added the `$x->li` method for computing the logarithmic integral of `$x`.
        - Optimized the `$k->root($n)` method for positive integer values of `$n`.
        - Added the `$n->bernreal` method, which returns the nth-Bernoulli number as a floating-point value.
        - Added the `$n->kronecker($k)` method, which returns the Kronecker symbol (n|k).
        - Added the following exportable functions:
