@@ -2083,7 +2083,9 @@ sub bsqr {
 The nth-Bernoulli number as an exact fraction, computed with an
 improved version of Seidel's algorithm, starting with C<bernfrac(0) = 1>.
 
-Returns Nan for negative values of C<$n>.
+For n >= 50, a more efficient algorithm is used, based on the Zeta function value of n.
+
+For negative values of C<$n>, Nan is returned.
 
 =cut
 
@@ -2096,8 +2098,49 @@ sub bernfrac {
     $n > 1 and $n % 2 and return zero();    # Bn=0 for odd n>1
     $n < 0 and return nan();
 
+    # Use a faster algorithm based on values of the Zeta function.
+    # B(n) = (-1)^(n/2 + 1) * zeta(n)*2*n! / (2*pi)^n
+    if ($n >= 50) {
+
+        my $prec = (
+            $n <= 156
+            ? CORE::int($n * CORE::log($n) + 1)
+            : CORE::int($n * CORE::log($n) / CORE::log(2) - 3 * $n)    # TODO: optimize for large n (>50_000)
+        );
+
+        my $f = Math::MPFR::Rmpfr_init2($prec);
+        Math::MPFR::Rmpfr_zeta_ui($f, $n, $ROUND);                     # f = zeta(n)
+
+        my $z = Math::GMPz::Rmpz_init();
+        Math::GMPz::Rmpz_fac_ui($z, $n);                               # z = n!
+
+        Math::MPFR::Rmpfr_mul_z($f, $f, $z, $ROUND);                   # f = f*z
+
+        my $p = Math::MPFR::Rmpfr_init2($prec);
+        Math::MPFR::Rmpfr_const_pi($p, $ROUND);                        # p = PI
+        Math::MPFR::Rmpfr_pow_ui($p, $p, $n, $ROUND);                  # p = p^n
+
+        Math::MPFR::Rmpfr_div($f, $f, $p, $ROUND);                     # f = f/p
+        Math::MPFR::Rmpfr_div_2ui($f, $f, $n - 1, $ROUND);             # f = f/2^(-n + 1)
+
+        Math::GMPz::Rmpz_set_ui($z, 1);                                # z = 1
+        Math::GMPz::Rmpz_mul_2exp($z, $z, $n + 1);                     # z = 2^(n+1)
+        Math::GMPz::Rmpz_sub_ui($z, $z, 2);                            # z = z-2
+
+        Math::MPFR::Rmpfr_mul_z($f, $f, $z, $ROUND);                   # f = f*z
+        Math::MPFR::Rmpfr_round($f, $f);                               # f = [f]
+
+        my $q = Math::GMPq::Rmpq_init();
+        Math::MPFR::Rmpfr_get_q($q, $f);                               # q = f
+        Math::GMPq::Rmpq_set_den($q, $z);                              # q = q/z
+        Math::GMPq::Rmpq_canonicalize($q);                             # remove common factors
+
+        Math::GMPq::Rmpq_neg($q, $q) if $n % 4 == 0;                   # q = -q    (iff 4|n)
+        return bless \$q, __PACKAGE__;
+    }
+
 #<<<
-    my @D =(
+    my @D = (
         Math::GMPz::Rmpz_init_set_ui(0),
         Math::GMPz::Rmpz_init_set_ui(1),
         map { Math::GMPz::Rmpz_init_set_ui(0) } 1 .. $n / 2
@@ -3656,28 +3699,38 @@ sub zeta {
 
     $n->bernreal                   # => BigNum | Nan
 
-The nth-Bernoulli number as a floating-point value,
-computed as: C<zeta(-n + 1) * -n> with C<bernreal(0) = 1>.
+The nth-Bernoulli number as a floating-point value, with C<bernreal(0) = 1>.
 
 Returns Nan for negative values of C<$n>.
 
 =cut
 
 sub bernreal {
-    my $r = _big2mpfr($_[0]);
+    my $n = CORE::int(Math::GMPq::Rmpq_get_d(${$_[0]}));
 
-    Math::MPFR::Rmpfr_trunc($r, $r);
-    Math::MPFR::Rmpfr_zero_p($r)  && return one();
-    Math::MPFR::Rmpfr_sgn($r) < 0 && return nan();
-    Math::MPFR::Rmpfr_neg($r, $r, $ROUND);
+    $n < 0  and return nan();
+    $n == 0 and return one();
+    $n == 1 and return Math::BigNum->new('1/2');
+    $n % 2  and return zero();                     # Bn = 0 for odd n>1
 
-    my $zeta = Math::MPFR::Rmpfr_init2($PREC);
-    Math::MPFR::Rmpfr_set($zeta, $r, $ROUND);
-    Math::MPFR::Rmpfr_add_ui($zeta, $zeta, 1, $ROUND);
-    Math::MPFR::Rmpfr_zeta($zeta, $zeta, $ROUND);
-    Math::MPFR::Rmpfr_mul($r, $r, $zeta, $ROUND);
+    #local $PREC = CORE::int($n*CORE::log($n)+1);
 
-    _mpfr2big($r);
+    my $bern = Math::MPFR::Rmpfr_init2($PREC);
+    Math::MPFR::Rmpfr_zeta_ui($bern, $n, $ROUND);    # bern = zeta(n)
+
+    my $f = Math::MPFR::Rmpfr_init2($PREC);
+    Math::MPFR::Rmpfr_fac_ui($f, $n, $ROUND);        # f = n!
+    Math::MPFR::Rmpfr_mul($bern, $bern, $f, $ROUND); # bern = bern*f
+
+    Math::MPFR::Rmpfr_const_pi($f, $ROUND);          # f = PI
+    Math::MPFR::Rmpfr_pow_ui($f, $f, $n, $ROUND);    # f = f^n
+
+    Math::MPFR::Rmpfr_div($bern, $bern, $f, $ROUND); # bern = bern/f
+    Math::MPFR::Rmpfr_div_2ui($bern, $bern, $n - 1, $ROUND);    # bern = bern / 2^(-n)
+
+    Math::MPFR::Rmpfr_neg($bern, $bern, $ROUND) if $n % 4 == 0;
+
+    _mpfr2big($bern);
 }
 
 =head2 erf
@@ -5863,11 +5916,8 @@ Class::Multimethods::multimethod bround => qw(Math::BigNum $) => sub {
 
     Math::GMPq::Rmpq_abs($n, $n) if $sgn < 0;
 
-    my $z = Math::GMPz::Rmpz_init();
-    Math::GMPz::Rmpz_ui_pow_ui($z, 10, CORE::abs($nth));
-
     my $p = Math::GMPq::Rmpq_init();
-    Math::GMPq::Rmpq_set_z($p, $z);
+    Math::GMPq::Rmpq_set_str($p, '1' . ('0' x CORE::abs($nth)), 10);
 
     if ($nth < 0) {
         Math::GMPq::Rmpq_div($n, $n, $p);
@@ -5883,6 +5933,8 @@ Class::Multimethods::multimethod bround => qw(Math::BigNum $) => sub {
     };
 
     Math::GMPq::Rmpq_add($n, $n, $half);
+
+    my $z = Math::GMPz::Rmpz_init();
     Math::GMPz::Rmpz_set_q($z, $n);
 
     if (Math::GMPz::Rmpz_odd_p($z) and Math::GMPq::Rmpq_integer_p($n)) {
