@@ -5,8 +5,9 @@ Revision history for Math-BigNum
 
             no Math::BigNum;     # disables the `:constant` behavior in the current scope
 
-        - Minor optimizations in the `bernfrac()` method.
-        - Optimizations in method `is_pow`. (Thanks Dana Jacobsen)
+        - Minor optimizations inside the `bernfrac()` method.
+        - Optimizations inside the method `is_pow`. (Thanks Dana Jacobsen)
+        - Faster algorithm in `bernfrac()` for values of `n` greater than 49. (based on the Zeta function)
 
 0.14    2016-10-07
         - Fixed a minor bug inside the method `n->is_pow(p)` when `n` is negative (for old versions of GMP).
